deploy/demo/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jobtracker-demo-http-redirect
  namespace: jobtracker-demo
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - jobtracker-demo.k8s.749rmw.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
