deploy/demo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jobtracker-demo
  namespace: jobtracker-demo
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - jobtracker-demo.k8s.749rmw.com
  rules:
    - backendRefs:
        - name: jobtracker-demo
          port: 80
